Added ffmpeg video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <strong>Left stick:</strong> move<br/>
       <strong>Right stick:</strong> rotate left-right / raise and lower<br/></p>
 
-      <video width="100px" height="100px"></video>
+      <img id="videoFeed"></video>
 
     <script src="lib/gamepad.js"></script>
 
