Move controls into its own service

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="js/services/chrome.js"></script>
     <script src="js/services/client.js"></script>
     <script src="js/services/command.js"></script>
+    <script src="js/services/controls.js"></script>
     <script src="js/services/drone_ip.js"></script>
     <script src="js/services/modes.js"></script>
     <script src="js/services/sequence.js"></script>
