Initial shitty version of gamepad

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     </div>
 
     <script src="js/libs/angular.js"></script>
-    <script src="js/libs/gamepad.js"></script>
     <script src="js/libs/ui-bootstrap-0.2.0.js"></script>
 
     <script src="js/skynet.js"></script>
@@ -51,6 +50,7 @@
     <script src="js/services/sockets.js"></script>
     <script src="js/services/status.js"></script>
     <script src="js/services/util.js"></script>
+    <script src="js/services/gamepad.js"></script>
 
     <script src="js/controllers/controls.js"></script>
     <script src="js/controllers/video_feed.js"></script>
