--- a/index.html
+++ b/index.html
@@ -7,32 +7,68 @@
     <link href="css/bootstrap.css" rel="stylesheet"></link>
     <link href="css/bootstrap-responsive.css" rel="stylesheet"></link>
     <link href="css/lcars.css" rel="stylesheet"></link>
+    <link href="css/main.css" rel="stylesheet"></link>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row-fluid">
-        <div id="instructions" class="span12">
-          <h1>Skynet 0.1 Alpha</h1>
-
-          <p id="message">
-            Connect to the AR.Drone's Wifi network.
-            Then press A on your gamepad to get started.
-          </p>
+        <div id="nav" class="span2">
+          <ul>
+            <li class="nav-a">
+              Skynet 0.1 Alpha
+              <div class="hr-top"><div class="hr-block"></div></div>
+            </li>
+            <li class="nav-c expandable" id="selected">
+              Dashboard
+              <div class="hr-bottom"><div class="hr-block"></div></div>
+            </li>
+            <li class="nav-d expandable">Kill Cam</li>
+            <li class="nav-e expandable">Online Status</li>
+            <li class="nav-f expandable">ABORT, ABORT, ABORT!</li>
+          </ul>
         </div>
-
-        <div id="video" class="span4" ng:controller="VideoFeed">
-          <div style="width:100%;height:100%;text-align:center;">
-            VIDEO
+        <div id="top" class="span10">
+          <div id="lcars">
+            <h1>Skynet 0.1 Alpha</h1>
+            <p>Connect to the AR.Drone's Wifi network. Then press A on your gamepad to get started.</p>
           </div>
         </div>
 
-        <div id="controls" class="span7" ng:controller="Controls">
+        <div id="main" class="span10" ng:controller="Controls">
           <div class="row-fluid">
             <div ng:repeat="control in controls" ng:class="controlClasses(control)">
               {{control}}
             </div>
           </div>
         </div>
+
+        <div id="navDisplay" class="span9" ng:controller="NavDisplay">
+          <div class="row-fluid">
+            <div class="span3">
+              <h2 class="page-header">Battery</h2>
+              <h1>{{battery()}}</h1>
+            </div>
+            <div class="span3">
+              <h2 class="page-header">State</h2>
+              <h1>{{state()}}</h1>
+            </div>
+            <div class="span3">
+              <h2 class="page-header">Altitude</h2>
+              <h1>{{altitude()}}</h1>
+            </div>
+          </div>
+
+         <!--  <div class="row-fluid span3">
+            <h2 class="page-header">phi</h2>
+            <h1>{{battery()}}</h1>
+          </div>
+          <div class="row-fluid span3">
+            <h2 class="page-header">Battery</h2>
+            <h1>{{battery()}}</h1>
+          </div> -->
+
+        </div>
+
       </div>
     </div>
 
@@ -48,11 +84,13 @@
     <script src="js/services/modes.js"></script>
     <script src="js/services/sequence.js"></script>
     <script src="js/services/sockets.js"></script>
+    <script src="js/services/navData.js"></script>
     <script src="js/services/status.js"></script>
     <script src="js/services/util.js"></script>
     <script src="js/services/gamepad.js"></script>
 
     <script src="js/controllers/controls.js"></script>
+    <script src="js/controllers/nav_display.js"></script>
     <script src="js/controllers/video_feed.js"></script>
   </body>
 </html>
